# image-tagger

./: README.md  train.py  train_efficientnet.py  train_multilevel.py  train_rbm.py
image-tagger-app/: Cargo.toml  index.html  model.json
image-tagger-app/src/: main.rs  main.rs_01
