[package]
name = "image-tagger-app"
version = "0.1.0"
authors = ["Jongkook Choi <jongkook90@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"], version="0.20.0" }
js-sys = "0.3"
gloo-file = "0.2.3"
tensorflow = "0.19.1"
# tensorflow = { version = "0.19.1", features = ["tensorflow_gpu"] }

[dependencies.web-sys]
version = "0.3"
features = ["File"]